--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,23 +1,34 @@
-name: Generate Snake Animation
+name: Generate snake animation
 
 on:
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
+
+  workflow_dispatch:
+
   push:
     branches:
-      - main
-  workflow_dispatch:
+    - master
 
 jobs:
   generate:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: Platane/snk@v2
-        with:
-          github_user_name: mohamedatef-99
-          outputs: dist/snake.svg
+    timeout-minutes: 5
 
-      - name: Upload Snake
-        uses: actions/upload-artifact@v2
+    steps:
+      - name: generate snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
-          name: snake
-          path: dist/snake.svg
+          github_user_name: ${{ github.repository_owner }}
+          outputs: dist/snake.svg?palette=github-dark
+
+
+      - name: push snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
